@@ -1,7 +1,6 @@
 // serverbrowser.cpp: eihrul's concurrent resolver, and server browser window management
 
 #include "engine.h"
-#include "SDL_thread.h"
 
 struct resolverthread
 {
