@@ -158,9 +158,47 @@ void stopmusic()
     DELETEP(musicstream);
 }
 
+#ifdef WIN32
+#define AUDIODRIVER "directsound winmm"
+#else
+#define AUDIODRIVER ""
+#endif
+bool shouldinitaudio = true;
+SVARF(audiodriver, AUDIODRIVER, { shouldinitaudio = true; initwarning("sound configuration", INIT_RESET, CHANGE_SOUND); });
+VARF(usesound, 0, 1, 1, { shouldinitaudio = true; initwarning("sound configuration", INIT_RESET, CHANGE_SOUND); });
 VARF(soundchans, 1, 32, 128, initwarning("sound configuration", INIT_RESET, CHANGE_SOUND));
-VARF(soundfreq, 0, MIX_DEFAULT_FREQUENCY, 44100, initwarning("sound configuration", INIT_RESET, CHANGE_SOUND));
+VARF(soundfreq, 0, MIX_DEFAULT_FREQUENCY, 48000, initwarning("sound configuration", INIT_RESET, CHANGE_SOUND));
 VARF(soundbufferlen, 128, 1024, 4096, initwarning("sound configuration", INIT_RESET, CHANGE_SOUND));
+
+bool initaudio()
+{
+    static string fallback = "";
+    static bool initfallback = true;
+    if(initfallback)
+    {
+        initfallback = false;
+        if(char *env = SDL_getenv("SDL_AUDIODRIVER")) copystring(fallback, env);
+    }
+    if(!fallback[0] && audiodriver[0])
+    {
+        vector<char*> drivers;
+        explodelist(audiodriver, drivers);
+        loopv(drivers)
+        {
+            SDL_setenv("SDL_AUDIODRIVER", drivers[i], 1);
+            if(SDL_InitSubSystem(SDL_INIT_AUDIO) >= 0)
+            {
+                drivers.deletearrays();
+                return true;
+            }
+        }
+        drivers.deletearrays();
+    }
+    SDL_setenv("SDL_AUDIODRIVER", fallback, 1);
+    if(SDL_InitSubSystem(SDL_INIT_AUDIO) >= 0) return true;
+    conoutf(CON_ERROR, "sound init failed: %s", SDL_GetError());
+    return false;
+}
 
 void initsound()
 {
@@ -169,8 +207,19 @@ void initsound()
     if(version.major == 2 && version.minor == 0 && version.patch == 6)
     {
         nosound = true;
-        conoutf(CON_ERROR, "audio is broken in SDL 2.0.6");
+        if(usesound) conoutf(CON_ERROR, "audio is broken in SDL 2.0.6");
         return;
+    }
+
+    if(shouldinitaudio)
+    {
+        shouldinitaudio = false;
+        if(SDL_WasInit(SDL_INIT_AUDIO)) SDL_QuitSubSystem(SDL_INIT_AUDIO);
+        if(!usesound || !initaudio())
+        {
+            nosound = true;
+            return;
+        }
     }
 
     if(Mix_OpenAudio(soundfreq, MIX_DEFAULT_FORMAT, 2, soundbufferlen)<0)
@@ -528,11 +577,13 @@ void syncchannels()
     }
 }
 
+VARP(minimizedsounds, 0, 0, 1);
+
 void updatesounds()
 {
     updatemumble();
     if(nosound) return;
-    if(minimized) stopsounds();
+    if(minimized && !minimizedsounds) stopsounds();
     else
     {
         reclaimchannels();
@@ -573,7 +624,7 @@ void preloadmapsounds()
  
 int playsound(int n, const vec *loc, extentity *ent, int flags, int loops, int fade, int chanid, int radius, int expire)
 {
-    if(nosound || !soundvol || minimized) return -1;
+    if(nosound || !soundvol || (minimized && !minimizedsounds)) return -1;
 
     soundtype &sounds = ent || flags&SND_MAP ? mapsounds : gamesounds;
     if(!sounds.configs.inrange(n)) { conoutf(CON_WARN, "unregistered sound: %d", n); return -1; }
@@ -675,8 +726,7 @@ int playsoundname(const char *s, const vec *loc, int vol, int flags, int loops, 
     return playsound(id, loc, NULL, flags, loops, fade, chanid, radius, expire);
 }
 
-void sound(int *n) { playsound(*n); }
-COMMAND(sound, "i");
+ICOMMAND(sound, "i", (int *n), playsound(*n));
 
 void resetsound()
 {
